# pass-rs

./: Cargo.toml  Makefile  README.md  config.rs
samples/: data.pass  data.txt
src/: backup.rs  env.rs  error.rs  find.rs  input_pw.rs  main.rs  output.rs  recover.rs  serial.rs
src/tui/: cmd.rs  mod.rs
src/util/: clip.rs  file.rs  mod.rs  proc.rs  xdg_path.rs
src/util/crypt/: header.rs  key.rs  mod.rs
src/util/record/: ir.rs  mod.rs
src/util/secret/: erase.rs  mod.rs
src/util/user_io/: mod.rs  style.rs
